fix: correct particles-js canvas positioning and z-index

--- a/sass/espouse.scss
+++ b/sass/espouse.scss
@@ -26,18 +26,24 @@ svg {
     margin: 0 auto;
 }
 
-#intro-masthead {
-	background: transparent;
-	height: 100vh;
-}
-
 #particles-js canvas{
     position: absolute;
-    top: 100px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 #particles-js {
+	position: relative;
 	background-color: black;
+}
+
+#intro-masthead {
+	background: transparent;
+	height: 100vh;
+	position: relative;
+	z-index: 1;
 }
 
 #particles-js .ui.cards {
